エネミーのステート周りの処理を修正 魔王のステート作成中

--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -271,9 +271,6 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyChaceState.cpp">
       <Filter>GameObject\Enemy\HFSN</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp">
-      <Filter>GameObject\Enemy\HFSN</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Enemy\HFSM\EnemySpeakState.cpp">
       <Filter>GameObject\Enemy\HFSN</Filter>
     </ClCompile>
@@ -303,6 +300,9 @@
     </ClCompile>
     <ClCompile Include="GameObject\LevelUpImage.cpp">
       <Filter>GameObject\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp">
+      <Filter>GameObject\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -587,9 +587,6 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyChaceState.h">
       <Filter>GameObject\Enemy\HFSN</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject\Enemy\EnemyDrarian.h">
-      <Filter>GameObject\Enemy\HFSN</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Enemy\HFSM\EnemySpeakState.h">
       <Filter>GameObject\Enemy\HFSN</Filter>
     </ClInclude>
@@ -622,6 +619,9 @@
     </ClInclude>
     <ClInclude Include="GameObject\LevelUpImage.h">
       <Filter>GameObject\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\EnemyDrarian.h">
+      <Filter>GameObject\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
