--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="GameObject\Enemy\BossDrarian.h" />
     <ClInclude Include="GameObject\Enemy\BreathObject.h" />
     <ClInclude Include="GameObject\Enemy\Enemy.h" />
+    <ClInclude Include="GameObject\Enemy\EnemyAttack.h" />
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
     <ClInclude Include="GameObject\Enemy\EnemyDrarian.h" />
     <ClInclude Include="GameObject\Enemy\EnemyManager.h" />
@@ -196,6 +197,7 @@
     <ClInclude Include="GameObject\Enemy\HFSM\LastBossThroneState.h" />
     <ClInclude Include="GameObject\Enemy\LaserBreath.h" />
     <ClInclude Include="GameObject\Enemy\LastBoss.h" />
+    <ClInclude Include="GameObject\Enemy\LastBossMagic.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
     <ClInclude Include="GameObject\GameManager.h" />
     <ClInclude Include="GameObject\Ground\Dungeon.h" />
@@ -288,6 +290,7 @@
     <ClCompile Include="GameObject\Component\ParticleEffect.cpp" />
     <ClCompile Include="GameObject\Enemy\BossDrarian.cpp" />
     <ClCompile Include="GameObject\Enemy\Enemy.cpp" />
+    <ClCompile Include="GameObject\Enemy\EnemyAttack.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyManager.cpp" />
@@ -310,6 +313,7 @@
     <ClCompile Include="GameObject\Enemy\HFSM\LastBossThroneState.cpp" />
     <ClCompile Include="GameObject\Enemy\LaserBreath.cpp" />
     <ClCompile Include="GameObject\Enemy\LastBoss.cpp" />
+    <ClCompile Include="GameObject\Enemy\LastBossMagic.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
     <ClCompile Include="GameObject\GameManager.cpp" />
     <ClCompile Include="GameObject\Ground\Dungeon.cpp" />
