--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -13,9 +13,6 @@
     <ClCompile Include="Scene\TitleScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\AttackValue2D.cpp">
-      <Filter>GameObject</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\SpaceCollisionObject.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
@@ -289,19 +286,27 @@
     <ClCompile Include="GameObject\Enemy\LastBoss.cpp">
       <Filter>GameObject\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\Enemy\LaserBreath.cpp">
-      <Filter>GameObject</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\StatusWindow\HoldItem2D.cpp">
       <Filter>GameObject\StatusWindow</Filter>
     </ClCompile>
     <ClCompile Include="AttackCollision.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\LevelUpImage.cpp">
-      <Filter>GameObject\Player</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\ItemManager\DropItem\DropItem.cpp" />
+    <ClCompile Include="GameObject\TextImage\AttackValue2D.cpp" />
+    <ClCompile Include="GameObject\TextImage\AttentionTextOnly.cpp" />
+    <ClCompile Include="GameObject\TextImage\BackWindowAndAttentionText.cpp" />
+    <ClCompile Include="GameObject\TextImage\LevelUpImage.cpp" />
+    <ClCompile Include="GameObject\Enemy\EnemyAttack.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Enemy\LastBossMagic.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Enemy\LaserBreath.cpp">
       <Filter>GameObject\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
@@ -316,9 +321,6 @@
     </ClInclude>
     <ClInclude Include="Scene\TitleScene.h">
       <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\AttackValue2D.h">
-      <Filter>GameObject</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\SpaceCollisionObject.h">
       <Filter>GameObject</Filter>
@@ -605,22 +607,30 @@
     <ClInclude Include="GameObject\Enemy\LastBoss.h">
       <Filter>GameObject\Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject\Enemy\LaserBreath.h">
-      <Filter>GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Enemy\BreathObject.h">
-      <Filter>GameObject</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\StatusWindow\HoldItem2D.h">
       <Filter>GameObject\StatusWindow</Filter>
     </ClInclude>
     <ClInclude Include="AttackCollision.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject\LevelUpImage.h">
-      <Filter>GameObject\Player</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Enemy\EnemyDrarian.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\ItemManager\DropItem\DropItem.h" />
+    <ClInclude Include="GameObject\TextImage\AttackValue2D.h" />
+    <ClInclude Include="GameObject\TextImage\AttentionTextOnly.h" />
+    <ClInclude Include="GameObject\TextImage\BackWindowAndAttentionText.h" />
+    <ClInclude Include="GameObject\TextImage\LevelUpImage.h" />
+    <ClInclude Include="GameObject\Enemy\EnemyAttack.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\LastBossMagic.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\LaserBreath.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\BreathObject.h">
       <Filter>GameObject\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
