--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -13,9 +13,6 @@
     <ClCompile Include="Scene\TitleScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\AttackValue2D.cpp">
-      <Filter>GameObject</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\SpaceCollisionObject.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
@@ -298,11 +295,15 @@
     <ClCompile Include="AttackCollision.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\LevelUpImage.cpp">
-      <Filter>GameObject\Player</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp">
       <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\TextImage\AttackValue2D.cpp" />
+    <ClCompile Include="GameObject\TextImage\AttentionTextOnly.cpp" />
+    <ClCompile Include="GameObject\TextImage\BackWindowAndAttentionText.cpp" />
+    <ClCompile Include="GameObject\TextImage\LevelUpImage.cpp" />
+    <ClCompile Include="GameObject\ItemManager\DropItem\DropItem.cpp">
+      <Filter>GameObject\ItemManager\DropItem</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -316,9 +317,6 @@
     </ClInclude>
     <ClInclude Include="Scene\TitleScene.h">
       <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\AttackValue2D.h">
-      <Filter>GameObject</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\SpaceCollisionObject.h">
       <Filter>GameObject</Filter>
@@ -617,11 +615,15 @@
     <ClInclude Include="AttackCollision.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject\LevelUpImage.h">
-      <Filter>GameObject\Player</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Enemy\EnemyDrarian.h">
       <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\TextImage\AttackValue2D.h" />
+    <ClInclude Include="GameObject\TextImage\AttentionTextOnly.h" />
+    <ClInclude Include="GameObject\TextImage\BackWindowAndAttentionText.h" />
+    <ClInclude Include="GameObject\TextImage\LevelUpImage.h" />
+    <ClInclude Include="GameObject\ItemManager\DropItem\DropItem.h">
+      <Filter>GameObject\ItemManager\DropItem</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -706,6 +708,9 @@
     </Filter>
     <Filter Include="Debug">
       <UniqueIdentifier>{0e110077-829a-4ce1-ade4-7f8ef76be220}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\ItemManager\DropItem">
+      <UniqueIdentifier>{e179da43-c17f-4fd6-971a-b617df0c2abf}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
