--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -172,7 +172,6 @@
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
     <ClInclude Include="Decide.h" />
-    <ClInclude Include="EnemyGolem.h" />
     <ClInclude Include="GameLight.h" />
     <ClInclude Include="GameObject\Camera\FreeCamera.h" />
     <ClInclude Include="GameObject\Camera\GameCamera.h" />
@@ -192,6 +191,7 @@
     <ClInclude Include="GameObject\Enemy\EnemyAttack.h" />
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
     <ClInclude Include="GameObject\Enemy\EnemyDrarian.h" />
+    <ClInclude Include="GameObject\Enemy\EnemyGolem.h" />
     <ClInclude Include="GameObject\Enemy\EnemyManager.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyChaceState.h" />
@@ -290,7 +290,6 @@
   <ItemGroup>
     <ClCompile Include="AttackCollision.cpp" />
     <ClCompile Include="Decide.cpp" />
-    <ClCompile Include="EnemyGolem.cpp" />
     <ClCompile Include="GameLight.cpp" />
     <ClCompile Include="GameObject\Camera\FreeCamera.cpp" />
     <ClCompile Include="GameObject\Camera\GameCamera.cpp" />
@@ -309,6 +308,7 @@
     <ClCompile Include="GameObject\Enemy\EnemyAttack.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp" />
+    <ClCompile Include="GameObject\Enemy\EnemyGolem.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyManager.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyChaceState.cpp" />
