--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -319,7 +319,9 @@
     <ClCompile Include="GameObject\TextImage\LevelUpImage.cpp">
       <Filter>GameObject\TextImage</Filter>
     </ClCompile>
-    <ClCompile Include="EnemyGolem.cpp" />
+    <ClCompile Include="GameObject\Enemy\EnemyGolem.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -654,7 +656,9 @@
     <ClInclude Include="GameObject\TextImage\LevelUpImage.h">
       <Filter>GameObject\TextImage</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyGolem.h" />
+    <ClInclude Include="GameObject\Enemy\EnemyGolem.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
