--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -322,6 +322,9 @@
     <ClCompile Include="GameObject\Enemy\EnemyGolem.cpp">
       <Filter>GameObject\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\EnemySoldier.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -657,6 +660,9 @@
       <Filter>GameObject\TextImage</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Enemy\EnemyGolem.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\EnemySoldier.h">
       <Filter>GameObject\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
