--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -325,6 +325,9 @@
     <ClCompile Include="Scene\LastBossTestScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\EnemySoldier.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -664,6 +667,9 @@
     </ClInclude>
     <ClInclude Include="Scene\LastBossTestScene.h">
       <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\EnemySoldier.h">
+      <Filter>GameObject\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
