--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -331,6 +331,9 @@
     <ClCompile Include="GameObject\Enemy\SordShock.cpp">
       <Filter>GameObject\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\BossGhost.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -675,6 +678,9 @@
       <Filter>GameObject\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Enemy\SordShock.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\BossGhost.h">
       <Filter>GameObject\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
