--- a/game/fbEngine/fbEngine/fbEngine.vcxproj
+++ b/game/fbEngine/fbEngine/fbEngine.vcxproj
@@ -35,6 +35,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="MeshColliderManager.cpp" />
     <ClCompile Include="_Culling\ObjectFrustumCulling.cpp" />
     <ClCompile Include="_Effect\Blur.cpp" />
     <ClCompile Include="_Effect\EffectManager.cpp" />
@@ -115,6 +116,7 @@
   <ItemGroup>
     <ClInclude Include="CharacterController.h" />
     <ClInclude Include="fbstdafx.h" />
+    <ClInclude Include="MeshColliderManager.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="_Culling\IObjectCulling.h" />
     <ClInclude Include="_Culling\ObjectFrustumCulling.h" />
