オブジェクト回転させるのめんどくさいのでプログラムで回転させました。

--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -341,7 +341,7 @@
       <Filter>GameObject\MeshObject</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Player\Player.cpp">
-      <Filter>GameObject\Player\PlayerState</Filter>
+      <Filter>GameObject\Player</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
